
2003-06-12  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/readmidi.c, timidity/reverb.[ch]:
	  Renew insertion effect.

2003-06-08  Saito <timidity@flashmail.com>

	* timidity/playmidi.[ch], timidity/readmidi.[ch],
	  timidity/rcp.c, timidity/timidity.c, timidity/reverb.c,
	  timidity/resample.c:
	  Fix in channel layer.
	  Change default -N to 0.

2003-06-08  URABE  <shyouhei@YahooBB218133008108.bbtec.net>

	* Makefile.am (dist-hook): Not to change msc-config.h every time
	* timidity/recache.c, timidity/resample.c, timidity/timidity.c:
	  Fix linkage of newt_coeff[][].

2003-06-06  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/tables.c:
	  Fix about sc_vol_table[] and sc_vel_table[].

2003-06-06  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/tables.[ch], timidity/timidity.c, timidity/playmidi.c:
	  recompute_amp() handles velocity/volume/expression levels
	  correctly now.  see comments on perceived_vol_table[] in
	  tables.c

2003-06-06  mput <root@mput.dip.jp>

	* timidity/esd_a.c : Restore. Latest changes into this file turned
	  out to be unable to run on Windows.

2003-06-06  Takashi Iwai <tiwai@suse.de>

	* timidity/aRts_a.c (output_data, open_output): Fix typo

2003-06-05  mput <root@mput.dip.jp>

	* timidity/timidity.c (main): Add check codes for interface
	  exsitence (thanks Bernhard Rosenkraenzer <bero@redhat.com>)

	* timidity/arts_a.c, timidity/output.c: Merged Bernhard
	  Rosenkraenzer <bero@redhat.com> 's implementation.

	* configure.in: Fix to fit with David's patch

	* timidity/esd_a.c (open_output, close_output): dlopen() libesd
	  rather than introducing yet another requirement (thanks David
	  Walser and Bernhard Rosenkraenzer <bero@redhat.com>)

	* timidity/timidity.h (MAIL_DOMAIN): to localhost (thanks David
	  Walser and Maurizio De Cecco)

2003-06-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): Bug fix
	* configure.in,autoconf/Makefile.boot: modernize

2003-06-02  mput <root@mput.dip.jp>
